# setuptools-issue

./: README.rst
animals.cat/: README.rst  setup.cfg
animals.cat/src/animals/cat/: sounds.py
animals.dog/: LICENSE.txt  setup.cfg
animals.dog/src/animals/dog/: sounds.py
