[metadata]
name = animals.dog
version = attr: animals.dog.__version__
description = Aniimals
long_description = file: README.rst, LICENSE.txt
keywords = 
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
namespace_packages=animals
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

